# sapf-max

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  test_sapf_parsing.txt
help/: sapf~.maxhelp  sapf~.maxpat
source/projects/sapf_exe/: CMakeLists.txt  main.cpp
source/projects/sapf_exe/include/: Object.hpp
source/projects/sapf_exe/libmanta/: CMakeLists.txt
source/projects/sapf_lib/: CMakeLists.sapf.txt  CMakeLists.txt
source/projects/sapf_lib/include/: sapf_debug.h
source/projects/sapf_lib/libmanta/: CMakeLists.txt
source/projects/sapf_lib/src/: Object.cpp
source/projects/sapf_tilde/: CMakeLists.bak.txt  CMakeLists.txt  sapf_tilde.cpp
source/projects/sapf_tilde/include/: Object.hpp  VM.hpp  sapf_debug.h
source/projects/sapf_tilde/src/: Object.cpp  Play.cpp  VM.cpp
source/projects/sapf_tilde/tests/: parser_validation_report.txt
